# ParsingBloom

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  schedule_runner.py  test_parser.py
Documentation/: README.aux  README.tex  whitepaper.aux  whitepaper.out  whitepaper.tex
config/: config.yaml  config_loader.py
connectors/: base.py  gmail.py  registry.py
core/: classifier.py  db_loader.py  exporter.py  flagged_tracker.py  metrics.py  models.py
deploy/: deploy_docker.sh  deploy_pb.sh  docker_deploy.sh  local_deploy.sh
gmail/: client.py
monitoring/: zscore_watch.py
parser/: base.py  email_utils.py  llm_parser.py  regex_fallback_parser.py
pipeline/: run_once.py  run_pipeline.py  scheduler.py  tasks.py
src/analysis/: clopper_pearson.py
src/connectors/: gmail.py  registry.py
src/core/: classifier.py  config_loader.py  db_loader.py  determinism.py  exporter.py  flagged_tracker.py  logging_setup.py  metrics.py  models.py  run_tracker.py
src/monitoring/: quality_control.py  zscore_watch.py
src/parser/: llm_parser.py  regex_fallback_parser.py  registry.py
src/pipeline/: determinism_plot.py  pipeline_execute.py  scheduler.py  tasks.py
src/schemas/: transactions.yaml
src/utils/: db_loader.py  email_query_builder.py  hash_utils.py  invoice_saver.py  pdf_utils.py  regex_fallback.py  schema_seed.py  validators.py
utils/: db_loader.py  email_query_builder.py  invoice_saver.py  pdf_utils.py  regex_fallback.py  validators.py
