[tool.poetry]
name = "parsingbloom"
version = "0.3.4"
description = "Email-to-Fact extractor for banking mailboxes"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "core" },
  { include = "parser" },
  { include = "connectors" },
  { include = "utils" },
  { include = "pipeline" },
  { include = "monitoring" },
]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "^0.30"
apscheduler = "^3.10"
beautifulsoup4 = "^4.13.4"
bitsandbytes = { version = "^0.45.5", extras = ["cuda126"] }
celery = "^5.3"
datasets = "^2.12.0"                  # ← for HF Dataset batching
huggingface-hub = "^0.23.0"           # ← optional helper for models
google-api-python-client = "^2.130"
google-auth-httplib2 = "^0.2"
google-auth-oauthlib = "^1.2"
keyring = "^25.2"
llama-cpp-python = "^0.2"
openai = "^1.6"
pandas = "^2.2"
pdfplumber = "^0.11"
pydantic = "^1.10"
python-dateutil = "^2.9"
python-json-logger = "^2.0"
PyPDF2 = "^3.0"
PyYAML = "^6.0"
prometheus-client = "^0.16"
psycopg2-binary = "^2.9"
pytest = "^8.2"
redis = "^4.5"
scipy = "^1.13"
snowflake-connector-python = "^3.10"
sqlalchemy = "^2.0"
triton = "^2.0"
transformers = "^4.41"
tqdm = "^4.66"                         # ← progress bars in parse_batch
pytesseract = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
